I started changing the Projects to be prominant

--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -24,7 +24,7 @@
             <li><strong><a href="index.html#projects">My Portfolio</a></strong></li>
             <li><strong><a href="about.html">About Me</a></strong></li>
             <li><strong><a href="coding.html">Coding Examples</a></strong></li>
-            <li><strong><a href="#">SCS Scheme</a></strong></li>
+            <li><strong><a class="currentPage" href="#">SCS Scheme</a></strong></li>
         </ul>
         <a href="index.html#contact-area" class="contact-me-link">Contact Me</a>
         <div class="social-media">
