--- a/coding.html
+++ b/coding.html
@@ -23,7 +23,7 @@
         <ul class="big-nav-list">
             <li><strong><a href="index.html#projects">My Portfolio</a></strong></li>
             <li><strong><a href="about.html">About Me</a></strong></li>
-            <li><strong><a href="#">Coding Examples</a></strong></li>
+            <li><strong><a class="currentPage" href="#">Coding Examples</a></strong></li>
             <li><strong><a href="SCSscheme.html">SCS Scheme</a></strong></li>
         </ul>
         <a href="index.html#contact-area" class="contact-me-link">Contact Me</a>
@@ -35,50 +35,8 @@
 
     <h1 id="coding-title">Coding Examples</h1>
 
-    <div id="coding-projects" class="projects">
-        <!-- add a transition to the project titles to scale up and move to the center on hover -->
-        <div id="coding-project-one" class="project coding-project">
-            <div class="project-title">Netmatters Site Fascimilie</div>
-            <div class="project-buttons">
-                <a href="#projects" class="project-button">Project</a>
-                <a href="https://github.com/Pjard94/Netmatters/tree/main/HTML_review" target="_blank" class="project-button">Github Code</a>
-            </div>
-        </div>
-        <div id="coding-project-two" class="project coding-project">
-            <div class="project-title">Axure Shopfront</div>
-            <div class="project-buttons">
-                <a href="https://ti09vc.axshare.com/" target="_blank" class="project-button">Project</a>
-                <!-- <a href="#projects" class="project-button">Read More</a> -->
-            </div>
-        </div>
-        <div id="coding-project-three" class="project coding-project">
-            <div class="project-title">Project title</div>
-            <div class="project-buttons">
-                <a href="#projects" class="project-button">Project</a>
-                <a href="#projects" class="project-button">Read More</a>
-            </div>
-        </div>
-        <div id="coding-project-four" class="project coding-project">
-            <div class="project-title">Project title</div>
-            <div class="project-buttons">
-                <a href="#projects" class="project-button">Project</a>
-                <a href="#projects" class="project-button">Read More</a>
-            </div>
-        </div>
-        <div id="coding-project-five" class="project coding-project">
-            <div class="project-title">Project title</div>
-            <div class="coding-project-buttons">
-                <a href="#projects" class="project-button">Project</a>
-                <a href="#projects" class="project-button">Read More</a>
-            </div>
-        </div>
-        <div id="coding-project-six" class="project coding-project">
-            <div class="project-title">Project title</div>
-            <div class="project-buttons">
-                <a href="#" class="project-button">Project</a>
-                <a href="#" class="project-button">Read More</a>
-            </div>
-        </div>
-    </div>
+
+
+   
 </body>
 </html>
