--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <div class="block-letter"><a href="index.html">P</a></div>
         <ul class="big-nav-list">
             <li><strong><a href="index.html#projects">My Portfolio</a></strong></li>
-            <li><strong><a href="#">About Me</a></strong></li>
+            <li><strong><a class="currentPage" href="#">About Me</a></strong></li>
             <li><strong><a href="coding.html">Coding Examples</a></strong></li>
             <li><strong><a href="SCSscheme.html">SCS Scheme</a></strong></li>
         </ul>
