--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="big-nav">
         <div class="block-letter"><a href="#">P</a></div>
         <ul class="big-nav-list">
-            <li><a href="#projects">My Portfolio</a></li>
+            <li><a href="#projects" class="currentPage">My Portfolio</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="coding.html">Coding Examples</a></li>
             <li><a href="SCSscheme.html">SCS Scheme</a></li>
@@ -49,42 +49,55 @@
         </header>
 
         <div id="projects" class="projects projects-mainpage">
+            
+            <!-- add a transition to the project titles to scale up and move to the center on hover -->
             <div id="project-one" class="project project-mainpage">
+                <div class="project-background"></div>
                 <div class="project-title">Netmatters Site Fascimilie</div>
                 <div class="project-buttons">
                     <a href="#projects" class="project-button">Project</a>
                     <a href="https://github.com/Pjard94/Netmatters/tree/main/HTML_review" target="_blank" class="project-button">Github Code</a>
                 </div>
             </div>
+
             <div id="project-two" class="project project-mainpage">
+                <div class="project-background"></div>
                 <div class="project-title">Axure Shopfront</div>
                 <div class="project-buttons">
                     <a href="https://ti09vc.axshare.com/" target="_blank" class="project-button">Project</a>
                     <!-- <a href="#projects" class="project-button">Read More</a> -->
                 </div>
             </div>
+
             <div id="project-three" class="project project-mainpage">
+                <div class="project-background"></div>
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
                     <a href="#projects" class="project-button">Project</a>
                     <a href="#projects" class="project-button">Read More</a>
                 </div>
             </div>
+
             <div id="project-four" class="project project-mainpage">
+                <div class="project-background"></div>
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
                     <a href="#projects" class="project-button">Project</a>
                     <a href="#projects" class="project-button">Read More</a>
                 </div>
             </div>
+
             <div id="project-five" class="project project-mainpage">
+                <div class="project-background"></div>
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
                     <a href="#projects" class="project-button">Project</a>
                     <a href="#projects" class="project-button">Read More</a>
                 </div>
             </div>
+
             <div id="project-six" class="project project-mainpage">
+                <div class="project-background"></div>
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
                     <a href="#projects" class="project-button">Project</a>
