Fixed a lot of issues added new coding page

--- a/coding.html
+++ b/coding.html
@@ -33,9 +33,17 @@
         </div>
     </div>
 
-    <h1 id="coding-title">Coding Examples</h1>
+    <div id="coding-container">
 
+        <h1 id="coding-title">Coding Examples</h1>
 
+        <div id="coding-example">
+            <div id="coding-example-title">Being made</div>
+            <div id="coding-example-code"></div>
+            <p id="coding-example-description">There will feature a code window and possibly a link to a git hub page.</p>
+        </div>
+
+    </div>
 
    
 </body>
