Fixed placement issues for contact and placement

--- a/index.html
+++ b/index.html
@@ -48,62 +48,67 @@
             </a>
         </header>
 
-        <div id="projects" class="projects projects-mainpage">
+        <div class="projects" >
+
+            <div id="projects" class="projects-container">
             
-            <!-- add a transition to the project titles to scale up and move to the center on hover -->
-            <div id="project-one" class="project project-mainpage">
-                <div class="project-background"></div>
-                <div class="project-title">Netmatters Site Fascimilie</div>
-                <div class="project-buttons">
-                    <a href="#projects" class="project-button">Project</a>
-                    <a href="https://github.com/Pjard94/Netmatters/tree/main/HTML_review" target="_blank" class="project-button">Github Code</a>
+                <!-- add a transition to the project titles to scale up and move to the center on hover -->
+                <div id="project-one" class="project project-mainpage">
+                    <div class="project-background"></div>
+                    <div class="project-title">Netmatters Site Fascimilie</div>
+                    <div class="project-buttons">
+                        <a href="#projects" class="project-button">Project</a>
+                        <a href="https://github.com/Pjard94/Netmatters/tree/main/HTML_review" target="_blank" class="project-button">Github Code</a>
+                    </div>
                 </div>
+
+                <div id="project-two" class="project project-mainpage">
+                    <div class="project-background"></div>
+                    <div class="project-title">Axure Shopfront</div>
+                    <div class="project-buttons">
+                        <a href="https://ti09vc.axshare.com/" target="_blank" class="project-button">Project</a>
+                        <!-- <a href="#projects" class="project-button">Read More</a> -->
+                    </div>
+                </div>
+
+                <div id="project-three" class="project project-mainpage">
+                    <div class="project-background"></div>
+                    <div class="project-title">Project title</div>
+                    <div class="project-buttons">
+                        <a href="#projects" class="project-button">Project</a>
+                        <a href="#projects" class="project-button">Read More</a>
+                    </div>
+                </div>
+
+                <div id="project-four" class="project project-mainpage">
+                    <div class="project-background"></div>
+                    <div class="project-title">Project title</div>
+                    <div class="project-buttons">
+                        <a href="#projects" class="project-button">Project</a>
+                        <a href="#projects" class="project-button">Read More</a>
+                    </div>
+                </div>
+
+                <div id="project-five" class="project project-mainpage">
+                    <div class="project-background"></div>
+                    <div class="project-title">Project title</div>
+                    <div class="project-buttons">
+                        <a href="#projects" class="project-button">Project</a>
+                        <a href="#projects" class="project-button">Read More</a>
+                    </div>
+                </div>
+
+                <div id="project-six" class="project project-mainpage">
+                    <div class="project-background"></div>
+                    <div class="project-title">Project title</div>
+                    <div class="project-buttons">
+                        <a href="#projects" class="project-button">Project</a>
+                        <a href="#projects" class="project-button">Read More</a>
+                    </div>
+                </div>
+
             </div>
 
-            <div id="project-two" class="project project-mainpage">
-                <div class="project-background"></div>
-                <div class="project-title">Axure Shopfront</div>
-                <div class="project-buttons">
-                    <a href="https://ti09vc.axshare.com/" target="_blank" class="project-button">Project</a>
-                    <!-- <a href="#projects" class="project-button">Read More</a> -->
-                </div>
-            </div>
-
-            <div id="project-three" class="project project-mainpage">
-                <div class="project-background"></div>
-                <div class="project-title">Project title</div>
-                <div class="project-buttons">
-                    <a href="#projects" class="project-button">Project</a>
-                    <a href="#projects" class="project-button">Read More</a>
-                </div>
-            </div>
-
-            <div id="project-four" class="project project-mainpage">
-                <div class="project-background"></div>
-                <div class="project-title">Project title</div>
-                <div class="project-buttons">
-                    <a href="#projects" class="project-button">Project</a>
-                    <a href="#projects" class="project-button">Read More</a>
-                </div>
-            </div>
-
-            <div id="project-five" class="project project-mainpage">
-                <div class="project-background"></div>
-                <div class="project-title">Project title</div>
-                <div class="project-buttons">
-                    <a href="#projects" class="project-button">Project</a>
-                    <a href="#projects" class="project-button">Read More</a>
-                </div>
-            </div>
-
-            <div id="project-six" class="project project-mainpage">
-                <div class="project-background"></div>
-                <div class="project-title">Project title</div>
-                <div class="project-buttons">
-                    <a href="#projects" class="project-button">Project</a>
-                    <a href="#projects" class="project-button">Read More</a>
-                </div>
-            </div>
         </div>
 
         <footer id="contact-area">
