Addeda  link to a git page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="project-background"></div>
                     <div class="project-title">Netmatters Site Fascimilie</div>
                     <div class="project-buttons">
-                        <a href="#projects" class="project-button">Project</a>
+                        <a href="https://pjard94.github.io/Netmatters/" class="project-button">Project</a>
                         <a href="https://github.com/Pjard94/Netmatters/tree/main/HTML_review" target="_blank" class="project-button">Github Code</a>
                     </div>
                 </div>
