Fixed the link to the first project git hub.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="project-title">Netmatters Site Fascimilie</div>
                     <div class="project-buttons">
                         <a href="https://pjard94.github.io/Netmatters/" target="_blank" class="project-button">Project</a>
-                        <a href="https://github.com/Pjard94/Netmatters/tree/main/HTML_review" target="_blank" class="project-button">Github Code</a>
+                        <a href="https://github.com/Pjard94/Netmatters" target="_blank" class="project-button">Github Code</a>
                     </div>
                 </div>
 
