Added a jquery plugin for typewriting

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title> Peter Jardine's Protfolio</title>
+    <link rel="stylesheet" href="js/text-typewriter-plugin/style.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -39,8 +40,15 @@
         <header>
             <div class="hero-image"></div>
             <div id="introduction">
+
                 <h1 id="me">My Name is Peter Jardine</h1>
-                <h3 id="role">I'm a Web Developer</h3>
+
+                <div class="text-typewriter-container">
+                    <p class="typewriter--text">I am a Web Developer</p>
+                    <p class="typewriter--text">I am a Programmer</p>
+                    <p class="typewriter--text">I am a Designer</p>
+                    <h3 id="role" class="text-typewriter-output"></h3>
+                </div>
             </div>
             <a href="#projects" id="scroll-area">
                 <div id="scroll-call">Scroll Down</div>
@@ -144,5 +152,9 @@
         </div>    
 
     </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/text-typewriter-plugin/index.js"></script>
+    <script src="js/base-script.js"></script>
+
 </body>
 </html>
