--- a/index.html
+++ b/index.html
@@ -63,16 +63,20 @@
                 <!-- add a transition to the project titles to scale up and move to the center on hover -->
                 <div id="project-one" class="project project-mainpage">
                     <div class="project-background"></div>
-                    <div class="project-title">Netmatters Site Fascimilie</div>
+                    <div class="project-title">Netmatters Site Fascimilie 
+                        <p class="project-description">My copy of the main Netmatters webpage. Primarily using HTML and CSS.</p>
+                    </div>
                     <div class="project-buttons">
-                        <a href="https://pjard94.github.io/Netmatters/" target="_blank" class="project-button">Project</a>
+                        <a href="http://netmatters.peter-jardine.netmatters-scs.co.uk/" target="_blank" class="project-button">Project</a>
                         <a href="https://github.com/Pjard94/Netmatters" target="_blank" class="project-button">Github Code</a>
                     </div>
                 </div>
 
                 <div id="project-two" class="project project-mainpage">
                     <div class="project-background"></div>
-                    <div class="project-title">Axure Shopfront</div>
+                    <div class="project-title">Axure Shopfront
+                        <p class="project-description">Using Axure I made a shop front using conditionals to connect pages and checkout page to hold the items.</p>
+                    </div>
                     <div class="project-buttons">
                         <a href="https://ti09vc.axshare.com/" target="_blank" class="project-button">Project</a>
                         <!-- <a href="#projects" class="project-button">Read More</a> -->
@@ -81,7 +85,9 @@
 
                 <div id="project-three" class="project project-mainpage">
                     <div class="project-background"></div>
-                    <div class="project-title">Project title</div>
+                    <div class="project-title">Project title
+                        <p class="project-description"></p>
+                    </div>
                     <div class="project-buttons">
                         <a href="#projects" class="project-button">Project</a>
                         <a href="#projects" class="project-button">Read More</a>
@@ -90,7 +96,9 @@
 
                 <div id="project-four" class="project project-mainpage">
                     <div class="project-background"></div>
-                    <div class="project-title">Project title</div>
+                    <div class="project-title">Project title
+                        <p class="project-description"></p>
+                    </div>
                     <div class="project-buttons">
                         <a href="#projects" class="project-button">Project</a>
                         <a href="#projects" class="project-button">Read More</a>
@@ -99,7 +107,9 @@
 
                 <div id="project-five" class="project project-mainpage">
                     <div class="project-background"></div>
-                    <div class="project-title">Project title</div>
+                    <div class="project-title">Project title
+                        <p class="project-description"></p>
+                    </div>
                     <div class="project-buttons">
                         <a href="#projects" class="project-button">Project</a>
                         <a href="#projects" class="project-button">Read More</a>
@@ -108,7 +118,9 @@
 
                 <div id="project-six" class="project project-mainpage">
                     <div class="project-background"></div>
-                    <div class="project-title">Project title</div>
+                    <div class="project-title">Project title
+                        <p class="project-description"></p>
+                    </div>
                     <div class="project-buttons">
                         <a href="#projects" class="project-button">Project</a>
                         <a href="#projects" class="project-button">Read More</a>
