Last little bit of fixing on the project cards

--- a/coding.html
+++ b/coding.html
@@ -39,7 +39,12 @@
 
         <div id="coding-example">
             <div id="coding-example-title">Being made</div>
-            <div id="coding-example-code"></div>
+            
+            <div id="coding-example-code">
+                <pre id="coding-example-code-window">
+                    
+                </pre>
+            </div>
             <p id="coding-example-description">There will feature a code window and possibly a link to a git hub page.</p>
         </div>
 
