--- a/coding.html
+++ b/coding.html
@@ -38,14 +38,46 @@
         <h1 id="coding-title">Coding Examples</h1>
 
         <div id="coding-example">
-            <div id="coding-example-title">Being made</div>
+            <div id="coding-example-title">Randomised comparing functions</div>
             
             <div id="coding-example-code">
-                <pre id="coding-example-code-window">
-                    
+                <pre id="coding-example-code-window" class="language-js">
+
+                    <code class="language-js">
+
+                        <span class="token-action">const</span><span class="token-character"> character</span><span> = </span><span class="token-variable-container">[</span><span class="token-string">"Loba"</span><span>, </span><span class="token-string">"Fuse"</span><span>, </span><span class="token-string">"Horizon"</span><span>, </span><span class="token-string">"Octane"</span><span>, </span><span class="token-string">"Wraith"</span><span>, </span><span class="token-string">"Wattson"</span><span>, </span><span class="token-string">"Revenant"</span><span>, </span><span class="token-string">"Rampart"</span><span>, </span><span class="token-string">"Pathfinder"</span><span>, </span><span class="token-string">"Mirage"</span><span>, </span><span class="token-string">"Lifeline"</span><span>, </span><span class="token-string">"Gibraltar"</span><span>, </span><span class="token-string">"Crypto"</span><span>, </span><span class="token-string">"Bloodhound"</span><span>, </span><span class="token-string">"Caustic"</span><span>, </span><span class="token-string">"Bangalore"</span><span>, </span><span class="token-string">"Valkyrie"</span><span class="token-variable-container">]</span><span>;</span>
+                        <span class="token-action">let</span><span class="token-variable-name"> character1</span><span>;</span>
+                        <span class="token-action">let</span><span class="token-variable-name"> character2</span><span>;</span>
+                        <span class="token-action">let</span><span class="token-variable-name"> character3</span><span>;</span>
+
+                        <span class="token-action">function </span><span class="token-selector">charac</span><span class="token-variable-container">() {</span>
+                            <span class="token-variable-name">character1</span><span> =</span><span class="token-character"> character</span><span  class="token-while">[</span><span class="token-variable-name">Math</span><span class="token-selector">.floor</span><span class="token-variable-name">(Math</span><span class="token-selector">.random</span><span class="token-variable-container">()</span><span> * </span><span class="token-character">character</span><span>.</span><span class="token-variable-name">length)</span><span class="token-while">]</span><span>;</span>
+                            <span class="token-variable-name">document</span><span class="token-selector">.getElementById</span><span class="token-while">(</span><span class="token-string">"character_output"</span><span class="token-while">)</span><span>.</span><span class="token-variable-name">innerHTML</span><span> = </span><span class="token-variable-name">character1</span><span>;</span>
+                            <span class="token-variable-container">}</span>
+
+                        <span class="token-action">function </span><span class="token-selector">charac2</span><span class="token-variable-container">() {</span>
+                            <span class="token-variable-name">character2</span><span> =</span><span class="token-character"> character</span><span class="token-while">[</span><span class="token-variable-name">Math</span><span class="token-selector">.floor</span><span class="token-variable-name">(Math</span><span>.</span><span class="token-selector"> random</span><span class="token-variable-container">()</span><span> * </span><span class="token-character">character</span><span>.</span><span class="token-variable-name">length)</span><span class="token-while">]</span><span>;</span>
+                            <span class="token-while">while</span><span class="token-while"> ( </span><span class="token-variable-name">character2</span><span> === </span><span class="token-variable-name">character1</span><span class="token-while">) </span><span class="token-while">{</span>
+                                <span class="token-variable-name">character2</span><span> =</span><span class="token-character"> character</span><span class="token-variable-name">[Math</span><span class="token-selector">.floor</span><span class="token-variable-container">(</span><span class="token-variable-name">Math</span><span class="token-selector">.random</span><span class="token-variable-container">()</span><span> * </span><span class="token-character">character</span><span>.</span><span class="token-variable-name">length</span><span class="token-variable-container">)</span><span class="token-variable-name">]</span><span>;</span>
+                                <span class="token-while">}</span>
+                            <span class="token-variable-name">document</span><span class="token-selector">.getElementById</span><span class="token-while">(</span><span class="token-string">"character_output2"</span><span class="token-while">)</span><span>.</span><span class="token-variable-name">innerHTML</span><span> = </span><span class="token-variable-name">character2</span><span>;</span>
+                            <span class="token-variable-container">}</span>
+
+                        <span class="token-action">function </span><span class="token-selector">charac3</span><span class="token-variable-container">() {</span>
+                            <span class="token-variable-name">character3</span><span> =</span><span class="token-character"> character</span><span class="token-while">[</span><span class="token-variable-name">Math</span><span class="token-selector">.floor</span><span class="token-variable-name">(Math</span><span class="token-selector">.random</span><span class="token-variable-container">()</span><span> * </span><span class="token-character">character</span><span>.</span><span class="token-variable-name">length)</span><span class="token-while">]</span><span>;</span>
+                            <span class="token-while">while</span><span  class="token-while"> ( </span><span class="token-variable-name">character3</span><span> === </span><span class="token-variable-name">character1</span><span> | | </span><span class="token-variable-name">character3</span><span> === </span><span class="token-variable-name">character2</span><span class="token-while">) </span><span class="token-while">{</span>
+                                <span class="token-variable-name">character3</span><span> =</span><span class="token-character"> character</span><span class="token-variable-name">[Math</span><span class="token-selector">.floor</span><span class="token-variable-container">(</span><span class="token-variable-name">Math</span><span class="token-selector">.random</span><span class="token-while">()</span><span> * </span><span class="token-character">character</span><span>.</span><span class="token-variable-name">length</span><span class="token-variable-container">)</span><span class="token-variable-name">]</span><span>;</span>
+                                <span class="token-while">}</span>
+                            <span class="token-variable-name">document</span><span class="token-selector">.getElementById</span><span class="token-while">(</span><span class="token-string">"character_output3"</span><span class="token-while">)</span><span>.</span><span class="token-variable-name">innerHTML</span><span> = </span><span class="token-variable-name">character3</span><span>;</span>
+                            <span class="token-variable-container">}</span>
+
+                    </code>
+
                 </pre>
             </div>
-            <p id="coding-example-description">There will feature a code window and possibly a link to a git hub page.</p>
+            <div class="coding-example-description-container">
+                <p class="coding-example-description">This code is from a personal project, in which I wanted three unique outputs, one for each person in the team using the site. A button press will return the first and after that each sucessive function checks against the previous outputs looping the randomiser until it produces a unique outcome. </p>
+            </div>
         </div>
 
     </div>
