Added links on coding page, added style to navmenu

--- a/coding.html
+++ b/coding.html
@@ -78,6 +78,10 @@
             <div class="coding-example-description-container">
                 <p class="coding-example-description">This code is from a personal project, in which I wanted three unique outputs, one for each person in the team using the site. A button press will return the first and after that each sucessive function checks against the previous outputs looping the randomiser until it produces a unique outcome. </p>
             </div>
+            <div class="coding-examples-links">
+                <a href="https://pjard94.github.io/Apex-team-strat/" class="project-button coding-example-button" target="blank">Webpage</a>
+                <a href="https://github.com/Pjard94/Apex-team-strat" class="project-button coding-example-button" target="blank">Github repository</a>
+            </div>
         </div>
 
     </div>
