changed the typewriter messages

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <h1 id="me">My Name is Peter Jardine</h1>
 
                 <div class="text-typewriter-container">
-                    <p class="typewriter--text">I am a Web Developer</p>
-                    <p class="typewriter--text">I am a Programmer</p>
-                    <p class="typewriter--text">I am a Designer</p>
+                    <p class="typewriter--text">I'm a Web Developer</p>
+                    <p class="typewriter--text">I'm a Programmer</p>
+                    <p class="typewriter--text">I'm a Designer</p>
                     <h3 id="role" class="text-typewriter-output"></h3>
                 </div>
             </div>
