Added fixes noted by scions

--- a/coding.html
+++ b/coding.html
@@ -28,8 +28,8 @@
         </ul>
         <a href="index.html#contact-area" class="contact-me-link">Contact Me</a>
         <div class="social-media">
-            <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/Pjard94" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank" class="social-media-links"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/Pjard94" target="_blank" class="social-media-links"><i class="fab fa-github"></i></a>
         </div>
     </div>
 
@@ -80,7 +80,7 @@
             </div>
             <div class="coding-examples-links">
                 <a href="https://pjard94.github.io/Apex-team-strat/" class="project-button coding-example-button" target="blank">Webpage</a>
-                <a href="https://github.com/Pjard94/Apex-team-strat" class="project-button coding-example-button" target="blank">Github repository</a>
+                <a href="https://github.com/Pjard94/Apex-team-strat" class="project-button coding-example-button" target="blank">Github</a>
             </div>
         </div>
 
