--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </ul>
         <a href="#contact-area" class="contact-me-link">Contact Me</a>
         <div class="social-media">
-            <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/Pjard94" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank" class="social-media-links"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/Pjard94" target="_blank" class="social-media-links"><i class="fab fa-github"></i></a>
         </div>
     </div>
 
