Fixes applied to project cards and form names

--- a/about.html
+++ b/about.html
@@ -43,16 +43,9 @@
             </div>
 
             <div id="about-me-paragraph">
+                <h3>Who am I?</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, ius ei inani evertitur, ex tempor recteque reprehendunt vel. Ea vim aliquid disputationi, his indoctum persecuti cotidieque ex. Dicit paulo delicata ea duo. Tractatos argumentum ei eos, cum no modo idque molestie, putant recteque ex eos.
-
-                    Ne munere mandamus consetetur pri. Vocibus delectus eam te, iudico vituperata mei in. Ea decore oblique malorum sed. Debitis lucilius mea ei, ei eos suas patrioque voluptatum.
-
-                    Iisque suavitate consequuntur sit ut. Cum choro cotidieque dissentiunt no, sale persequeris nec id. Ut albucius sensibus quo. At mel tibique principes. Probo nominavi vix ad, eum rebum causae cu.
-
-                    Facete ullamcorper ea cum, in per erant nostrum urbanitas, id cum utinam ubique laoreet. Ne has ullum quando ridens, nec meis iracundia te. Epicurei scripserit vel cu, sed error discere dolorum ut, te nihil labitur molestiae nam. Dico viris singulis cum ad.
-
-                    Autem alterum eu eum. Ad perfecto prodesset ius. Sed no ludus noster saperet, prima iusto argumentum no usu. Per cibo evertitur eu, ullum appareat no sea. Sea eruditi nominati intellegat an, per sint assum tation cu. Pri cu alterum ullamcorper, an sea scribentur adversarium deterruisset, legere cetero perpetua id vix.
+                    My name is Peter Jardine and i am currently learning to code through the <a href="SCSscheme.html" target="blank" id="about-scheme-link">Scion scheme</a> with Netmatters.
                 </p>
             </div>
 
