About sorting, some scheme fixing.

--- a/about.html
+++ b/about.html
@@ -43,9 +43,19 @@
             </div>
 
             <div id="about-me-paragraph">
-                <h3>Who am I?</h3>
-                <p>
-                    My name is Peter Jardine and i am currently learning to code through the <a href="SCSscheme.html" target="blank" id="about-scheme-link">Scion scheme</a> with Netmatters.
+
+                <h3 class="about-first-line">My name is Peter Jardine, I am a Manchester based developer in training.</h3>
+
+                <p class="about-paragraphs">
+                    I am currently learning to code through the <a href="SCSscheme.html" target="blank" id="about-scheme-link">Scion scheme</a> with Netmatters.
+                </p>
+
+                <p class="about-paragraphs">
+                    I have been learning front end development, with HTML and CSS courses. Recently I have started learning about the back end of web development with Javascript and Jquery.
+                </p>
+
+                <p class="about-paragraphs">
+                    When learning new things, I have then attempted to apply what I have learned to a personal project. A strat roulette for a game, which with the press of a button the players would recieve challenges to make the game harder or more fun. 
                 </p>
             </div>
 
