--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title> Peter Jardine's Protfolio</title>
-    <link rel="stylesheet" href="js/text-typewriter-plugin/style.css">
+    <!-- <link rel="stylesheet" href="js/text-typewriter-plugin/style.css"> -->
+    <link rel="stylesheet" href="js/configurable-text-typewriter/css/cursor.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -47,7 +48,7 @@
                     <p class="typewriter--text">I'm a Web Developer</p>
                     <p class="typewriter--text">I'm a Programmer</p>
                     <p class="typewriter--text">I'm a Designer</p>
-                    <h3 id="role" class="text-typewriter-output"></h3>
+                    <h3 id="role" class="text-typewriter-output"> I'm a Web Developer</h3>
                 </div>
             </div>
             <a href="#projects" id="scroll-area">
@@ -164,8 +165,10 @@
         </div>    
 
     </div>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/text-typewriter-plugin/index.js"></script>
+    <!-- <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/text-typewriter-plugin/index.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/configurable-text-typewriter/js/jquery.typewriter.min.js"></script>
     <script src="js/base-script.js"></script>
 
 </body>
