Organising my HTML

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title> Peter Jardine's Protfolio</title>
-    <!-- <link rel="stylesheet" href="js/text-typewriter-plugin/style.css"> -->
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -57,7 +56,7 @@
 
             <div id="projects" class="projects-container">
             
-                <!-- add a transition to the project titles to scale up and move to the center on hover -->
+                <!-- add a transition to the project titles and descriptions to move up on hover -->
                 <div id="project-one" class="project project-mainpage">
                     <div class="project-background"></div>
                     <div class="project-title">Netmatters Site Fascimilie 
