Added notes and some fixes as suggested

--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -35,6 +35,8 @@
 
     <div id="SCSscheme-page">
 
+        <!-- This page is to describe what the scion scheme is about.-->
+
         <h1 id="SCSscheme-title">SCS Scheme</h1>
 
         <div id="SCSscheme">
@@ -50,6 +52,7 @@
                 <div class="SCSscheme--card--filler scs-left-align">Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they've covered in certain areas.</div>
                 <h4 class="SCSscheme--card--filler">Score: 10,342</h4>
                 <a href="https://teamtreehouse.com/peterjardine2" target="_blank" class="treehouse_profile">View my Profile</a>
+                <!-- the link above goes to a new page for my treehouse profile -->
             </div>
             <div class="SCSscheme--card">
                 <h2 class="SCSscheme--card--title">About Netmatters</h2>
