--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
 
                 <h3 class="about-first-line">My name is Peter Jardine, I am a Manchester based developer in training.</h3>
 
+                <!-- the link in the about area goes to the scs scheme page as it's mentioned in the about section -->
                 <p class="about-paragraphs">
                     I am currently learning to code through the <a href="SCSscheme.html" target="blank" id="about-scheme-link">Scion scheme</a> with Netmatters.
                 </p>
