--- a/coding.html
+++ b/coding.html
@@ -41,6 +41,7 @@
             <div id="coding-example-title">Randomised comparing functions</div>
             
             <div id="coding-example-code">
+                <!-- this window is to be used to show code, each of the spans are used to hold different elements -->
                 <pre id="coding-example-code-window" class="language-js">
 
                     <code class="language-js">
@@ -78,6 +79,8 @@
             <div class="coding-example-description-container">
                 <p class="coding-example-description">This code is from a personal project, in which I wanted three unique outputs, one for each person in the team using the site. A button press will return the first and after that each sucessive function checks against the previous outputs looping the randomiser until it produces a unique outcome. </p>
             </div>
+
+            <!-- These buttons link to the project showed in the code window -->
             <div class="coding-examples-links">
                 <a href="https://pjard94.github.io/Apex-team-strat/" class="project-button coding-example-button" target="blank">Webpage</a>
                 <a href="https://github.com/Pjard94/Apex-team-strat" class="project-button coding-example-button" target="blank">Github</a>
