--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
                 <h1 id="me">My Name is Peter Jardine</h1>
 
+                <!-- this area is targeted by my jQuery for the text typewriter effect -->
                 <div class="text-typewriter-container">
                     <h3 id="role" class="text-typewriter-output"></h3>
                 </div>
@@ -143,6 +144,7 @@
                     </div>
                 </div>
                 <form id="contact-form">
+                    <!-- A basic form to contact me -->
                     <input class="contact-form-input" id="contact-form-first" type="text" placeholder="First Name*">
                     <input class="contact-form-input" id="contact-form-last" type="text" placeholder="Last Name*">
                     <input class="contact-form-input" type="email" placeholder="Email*">
@@ -160,6 +162,8 @@
         </div>    
 
     </div>
+
+    <!-- these allow for the typewriter to work -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/better-typewriter/typed.min.js.map"></script>
     <script src="js/better-typewriter/typed.js"></script>
