Adding side menu changes

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 <body>
 
-    <div id="burger-box" class="small-nav">
+    <button id="burger-box" class="small-nav">
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <div>Menu</div>
-    </div>
+    </button>
 
     <div id="big-nav" class="big-nav">
         <div class="block-letter"><a href="#">P</a></div>
@@ -171,6 +171,7 @@
 
     <!-- these allow for the typewriter to work -->
     <script src="js/better-typewriter/typed.js"></script>
+    <script src="js/nav-menu.js"></script>
     <script src="js/base-script.js"></script>
 
 </body>
